cabal-version:      3.0
name:               haskeww
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             michalspano
maintainer:         spano@michalspano.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable haskeww
    import:           warnings
    main-is:          Main.hs
    other-modules:    AddProject,
                      SortProjects
    ghc-options:      -O2
    build-depends:    base ^>=4.17.0.0,
                      aeson,
                      text,
                      bytestring
    hs-source-dirs:   app,
                      src
    default-language: Haskell2010
